git-repair (1.20150107) UNRELEASED; urgency=medium

  * Merge from git-annex.

 -- Joey Hess <id@joeyh.name>  Wed, 29 Apr 2015 14:59:40 -0400

git-repair (1.20150106) unstable; urgency=medium

  * Debian package is now maintained by Gergely Nagy.
  * Fix build with process 1.2.1.0.
  * Merge from git-annex.

 -- Joey Hess <id@joeyh.name>  Tue, 06 Jan 2015 19:09:23 -0400

git-repair (1.20141027) unstable; urgency=medium

  * Adjust cabal file to support network-uri split.
  * Merge Build/ from git-annex, including removing a use of deprecated
    System.Cmd.

 -- Joey Hess <joeyh@debian.org>  Mon, 27 Oct 2014 11:09:56 -0400

git-repair (1.20141026) unstable; urgency=medium

  * Prevent auto gc from happening when fetching from a remote.
  * Merge from git-annex.

 -- Joey Hess <joeyh@debian.org>  Sun, 26 Oct 2014 13:37:30 -0400

git-repair (1.20140914) unstable; urgency=medium

  * Update to build with optparse-applicative 0.10. Closes: #761552

 -- Joey Hess <joeyh@debian.org>  Sun, 14 Sep 2014 12:48:27 -0400

git-repair (1.20140815) unstable; urgency=medium

  * Removing bad objects could leave fsck finding no more unreachable objects,
    but some branches no longer accessible. Fix this, including support for
    fixing up repositories that were incompletely repaired before.
  * Merge from git-annex.

 -- Joey Hess <joeyh@debian.org>  Fri, 15 Aug 2014 13:49:09 -0400

git-repair (1.20140423) unstable; urgency=medium

  * Improve memory usage when git fsck finds a great many broken objects.
  * Merge from git-annex.

 -- Joey Hess <joeyh@debian.org>  Wed, 23 Apr 2014 14:01:30 -0400

git-repair (1.20140227) unstable; urgency=medium

  * Optimise unpacking of pack files, and avoid repeated error
    messages about corrupt pack files.
  * Add swapping 2 files test case.

 -- Joey Hess <joeyh@debian.org>  Thu, 27 Feb 2014 11:56:27 -0400

git-repair (1.20140115) unstable; urgency=medium

  * Support old git versions from before git fsck --no-dangling was