@@ -1,5 +1,7 @@
 git-repair (1.20150107) UNRELEASED; urgency=medium
 
+  * Fix insecure temporary permissions and potential denial of
+    service attack when creating temp dirs. Closes: #807341
   * Merge from git-annex.
 
  -- Joey Hess <id@joeyh.name>  Wed, 29 Apr 2015 14:59:40 -0400
